--- a/styles.css
+++ b/styles.css
@@ -19,8 +19,20 @@ div.container {
 }
 
 ul.recipes-list {
+    list-style-type: none;
     display: inline-block;
     text-align: left;
+}
+
+.recipes-list li {
+  float: left;
+}
+
+.recipes-list li a {
+  display: block;
+  text-align: center;
+  padding: 16px;
+  text-decoration: none;
 }
 
 p {
